# wasm-component-ld

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  main.yml  publish.yml
ci/: build-tarballs.sh  publish.rs
src/: argfile.rs  lib.rs  main.rs  wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.proxy.wasm  wasi_snapshot_preview1.reactor.wasm
tests/: all.rs
