[package]
name = "wasm-component-ld"
version = "0.5.8"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
description = "Linker for `wasm32-wasip2`"
repository = "https://github.com/bytecodealliance/wasm-component-ld"
readme = "README.md"
rust-version = "1.76.0"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/{name}-v{version}-{target-arch}-{target-family}{archive-suffix}"
bin-dir = "{name}-v{version}-{target-arch}-{target-family}/{bin}{binary-ext}"
pkg-fmt = "tgz"
[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{repo}/releases/download/v{version}/{name}-v{version}-{target-arch}-macos{archive-suffix}"
bin-dir = "{name}-v{version}-{target-arch}-macos/{bin}{binary-ext}"
[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{repo}/releases/download/v{version}/{name}-v{version}-{target-arch}-macos{archive-suffix}"
bin-dir = "{name}-v{version}-{target-arch}-macos/{bin}{binary-ext}"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.4", features = ['derive'] }
lexopt = "0.3.0"
tempfile = "3.10.0"
wasmparser = "0.217.0"
wat = "1.217.0"
wit-component = "0.217.0"
wit-parser = "0.217.0"
wasi-preview1-component-adapter-provider = "24.0.0"
